# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint-check.yml
gen_diff/: __init__.py  cli.py  gendiff.py  logout.py  open_source.py
gen_diff/formatters/: formatter_json.py  formatter_plain.py  formatter_stylish.py  make_format.py
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  cli.py  compare_files.py  gen_diff.py  gendiff.py  generate_diff.py  io.py  logout.py  make_inner_diff.py  open_source.py  out_log.py
gendiff/engine/: compare_files.py  parsers.py
gendiff/formatters/: format.py  formatter_json.py  formatter_plain.py  formatter_stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
gendiff_proj/engine/: compare_files.py
gendiff_proj/formatters/: formatter_plain.py  formatter_stylish.py
gendiff_proj/scripts/: gendiff.py
hexlet_python_package/engine/: compare_files.py
hexlet_python_package/scripts/: gendiff.py
tests/: test_gendiff.py  test_plain_json.py  test_plain_text.py  test_plain_yaml.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py  test_step8.py  tests_step6.py  tests_step7.py
tests/fixtures/: json_diff.json
tests/fixtures/step8/: result.json
