[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "project lvl2"
authors = ["Stolbov Alex"]

packages = [
    { include = "hexlet_python_package" },
]

    [tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "hexlet_python_package.scripts.gendiff:main"
